[gd_scene load_steps=4 format=3 uid="uid://dessid8kik7r8"]

[ext_resource type="Script" uid="uid://v3dj5mt8ovw0" path="res://01_Source/00_Main/01_Game/game_manager.gd" id="1_gu7u4"]
[ext_resource type="PackedScene" uid="uid://c31iito6ph7xe" path="res://01_Source/02_Cockpit/00_Level/cockpit_level.tscn" id="2_kcsw3"]
[ext_resource type="Texture2D" uid="uid://c7i71lns6i3vf" path="res://00_Assets/00_Sprites/space sprites/laika_spaceship.png" id="2_xao3e"]

[node name="GameManager" type="Node2D"]
script = ExtResource("1_gu7u4")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="ScreenContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="CockpitContainer" type="VBoxContainer" parent="Control/ScreenContainer"]
custom_minimum_size = Vector2(675, 0)
layout_mode = 2
theme_override_constants/separation = 0

[node name="LivingSpaceContainer" type="SubViewportContainer" parent="Control/ScreenContainer/CockpitContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SubViewport" type="SubViewport" parent="Control/ScreenContainer/CockpitContainer/LivingSpaceContainer"]
handle_input_locally = false
size = Vector2i(675, 470)
render_target_update_mode = 4

[node name="CockpitLevel" parent="Control/ScreenContainer/CockpitContainer/LivingSpaceContainer/SubViewport" instance=ExtResource("2_kcsw3")]

[node name="ColorRect" type="ColorRect" parent="Control/ScreenContainer/CockpitContainer/LivingSpaceContainer"]
visible = false
custom_minimum_size = Vector2(675, 470)
layout_mode = 2
color = Color(0.62544, 0.249444, 0.254865, 1)

[node name="BorderHorz" type="TextureRect" parent="Control/ScreenContainer/CockpitContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Control/ScreenContainer/CockpitContainer/BorderHorz"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.283736, 0.181753, 0.175551, 1)

[node name="ControlPanelContainer" type="SubViewportContainer" parent="Control/ScreenContainer/CockpitContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="SubViewport" type="SubViewport" parent="Control/ScreenContainer/CockpitContainer/ControlPanelContainer"]
handle_input_locally = false
size = Vector2i(675, 230)
render_target_update_mode = 4

[node name="ColorRect" type="ColorRect" parent="Control/ScreenContainer/CockpitContainer/ControlPanelContainer"]
custom_minimum_size = Vector2(675, 230)
layout_mode = 2
color = Color(0.17, 0.0714, 0.0730433, 1)

[node name="BorderVert" type="TextureRect" parent="Control/ScreenContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Control/ScreenContainer/BorderVert"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.283736, 0.181753, 0.175551, 1)

[node name="SpaceContainer" type="SubViewportContainer" parent="Control/ScreenContainer"]
layout_mode = 2

[node name="SubViewport" type="SubViewport" parent="Control/ScreenContainer/SpaceContainer"]
handle_input_locally = false
size = Vector2i(585, 720)
render_target_update_mode = 4

[node name="ColorRect" type="ColorRect" parent="Control/ScreenContainer/SpaceContainer"]
custom_minimum_size = Vector2(585, 720)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="LaikaSpaceship" type="Sprite2D" parent="Control/ScreenContainer/SpaceContainer"]
position = Vector2(299, 585)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_xao3e")
